--- a/juatsapp_Dominio/pom.xml
+++ b/juatsapp_Dominio/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.mycompany.juatsapp_dominio.Juatsapp_Dominio</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.10.1</version>
+        </dependency>       
+    </dependencies>
 </project>
