--- a/juatsapp_Persistencia/pom.xml
+++ b/juatsapp_Persistencia/pom.xml
@@ -11,4 +11,16 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.mycompany.juatsapp_persistencia.Juatsapp_Persistencia</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>juatsapp_Dominio</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
