--- a/juatsapp_Dominio/pom.xml
+++ b/juatsapp_Dominio/pom.xml
@@ -16,6 +16,12 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver</artifactId>
             <version>3.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
         </dependency>       
     </dependencies>
+    <name>juatsapp_Negocio</name>
 </project>
