--- a/juatsapp_Presentacion/pom.xml
+++ b/juatsapp_Presentacion/pom.xml
@@ -11,4 +11,21 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.mycompany.juatsapp_presentacion.Juatsapp_Presentacion</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.lgooddatepicker</groupId>
+            <artifactId>LGoodDatePicker</artifactId>
+            <version>11.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+    </dependencies>
 </project>
