--- a/juatsapp_Presentacion/pom.xml
+++ b/juatsapp_Presentacion/pom.xml
@@ -27,5 +27,10 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>juatsapp_Persistencia</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
