--- a/juatsapp_Dominio/pom.xml
+++ b/juatsapp_Dominio/pom.xml
@@ -21,7 +21,12 @@
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
-        </dependency>       
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>juatsapp_Persistencia</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <name>juatsapp_Negocio</name>
 </project>
